--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.main{
+    padding: 20px;
+    font-size: 50px;
+    color: rgb(173, 173, 173);
+    font-family: "lemonmilk",sans-serif;
+}
+
 .body{
     background-attachment: fixed;
 }
@@ -6,25 +13,34 @@
     background-color: rgb(123, 161, 185);
     margin-left: 500px;
     height: 400px;
-    width: 700px;
-    margin-top:-370px ;
+    width: 760px;
+    margin-top:-340px ;
     border-radius: 25px;
 }
 
 .middle-section{
     background-color: rgb(6, 66, 135);
     margin-left: 500px;
-    height: 600px;
+    height: 500px;
     width: 700px;
     margin-top: 20px;
-    border-radius: 25px;
+    padding: 30px;
+    font-size: 50px;
+    color: white;
+    font-family: "lemonmilk",sans-serif;
+    border-radius: 35px;
+}
+
+@font-face {
+    font-family: "lemonmilk";
+    src: url(Fonts/lemon_milk/LEMONMILK-Bold.otf);
 }
 
 .lower-section{
     background-color: rgb(123, 161, 185);
     margin-left: 500px;
-    height: 40px;
-    width: 700px;
+    height: 60px;
+    width: 760px;
     margin-top:20px ;
     margin-bottom: -100px;
     border-top-left-radius: 25px;
@@ -34,8 +50,13 @@
 .side-bar{
     background-color: rgb(6, 66, 135);
     margin-left: 1300px;
-    height: 720px;
-    margin-top:-720px;
-    border-radius: 25px;
+    height: 685px;
+    margin-top:-730px;
+    border-top-left-radius: 35px;
+    border-bottom-left-radius: 35px;
     width: 275px;
+    padding: 25px;
+    font-size: 40px;
+    color: white;
+    font-family: "lemonmilk",sans-serif;
 }
