--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .main{
-    padding: 20px;
+    padding: 15px;
     font-size: 50px;
-    color: rgb(173, 173, 173);
+    color: rgb(59, 59, 59);
     font-family: "lemonmilk",sans-serif;
 }
 
@@ -12,10 +12,11 @@
 .upper-section{
     background-color: rgb(123, 161, 185);
     margin-left: 500px;
-    height: 400px;
+    height: 70px;
     width: 760px;
-    margin-top:-340px ;
-    border-radius: 25px;
+    margin-top: -170px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 
 .middle-section{
@@ -54,7 +55,7 @@
     margin-top:-730px;
     border-top-left-radius: 35px;
     border-bottom-left-radius: 35px;
-    width: 275px;
+    width: 150px;
     padding: 25px;
     font-size: 40px;
     color: white;
